--- a/rms_status_frontend/package.json
+++ b/rms_status_frontend/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.1",
+    "@types/styled-components": "^5.1.15",
     "axios": "^0.23.0",
     "cra-template-typescript": "1.1.2",
     "react": "^17.0.2",
@@ -14,8 +16,10 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "save": "^2.4.0",
     "styled-components": "^5.3.3",
-    "typesafe-actions": "^5.1.0"
+    "typesafe-actions": "^5.1.0",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
